--- a/07_CART/CART_APP_WF_WL/CartAppWF/.settings/org.eclipse.wst.common.component
+++ b/07_CART/CART_APP_WF_WL/CartAppWF/.settings/org.eclipse.wst.common.component
@@ -1,38 +1,107 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
-    <wb-module deploy-name="CartAppWF">
-        <wb-resource deploy-path="/" source-path="/CartAppWF"/>
-        <dependent-module archiveName="CartServicesClient.jar" deploy-path="/lib" handle="module:/resource/CartServicesClient/CartServicesClient">
+    <wb-module deploy-name="CartAppWF-1.0">
+        <wb-resource deploy-path="/" source-path="/build/m2e-wtp/ear-resources"/>
+        <wb-resource deploy-path="/" source-path="/src/main/application" tag="defaultRootSource"/>
+        <dependent-module archiveName="CartEntities-1.0.jar" deploy-path="/lib" handle="module:/resource/CartEntities/CartEntities">
             <dependency-type>uses</dependency-type>
         </dependent-module>
-        <dependent-module archiveName="CartRS.war" deploy-path="/" handle="module:/resource/CartRS/CartRS">
-            <dependent-object/>
+        <dependent-module archiveName="hibernate-core-4.3.11.Final.jar" deploy-path="/lib" handle="module:/classpath/var/M2_REPO/org/hibernate/hibernate-core/4.3.11.Final/hibernate-core-4.3.11.Final.jar">
             <dependency-type>uses</dependency-type>
         </dependent-module>
-        <dependent-module archiveName="CartEntities.jar" deploy-path="/lib" handle="module:/resource/CartEntities/CartEntities">
+        <dependent-module archiveName="jboss-logging-3.1.3.GA.jar" deploy-path="/lib" handle="module:/classpath/var/M2_REPO/org/jboss/logging/jboss-logging/3.1.3.GA/jboss-logging-3.1.3.GA.jar">
             <dependency-type>uses</dependency-type>
         </dependent-module>
-        <dependent-module archiveName="CartGatewayClient.jar" deploy-path="/lib" handle="module:/resource/CartGatewayClient/CartGatewayClient">
+        <dependent-module archiveName="jboss-logging-annotations-1.2.0.Beta1.jar" deploy-path="/lib" handle="module:/classpath/var/M2_REPO/org/jboss/logging/jboss-logging-annotations/1.2.0.Beta1/jboss-logging-annotations-1.2.0.Beta1.jar">
             <dependency-type>uses</dependency-type>
         </dependent-module>
-        <dependent-module archiveName="CartGateway.jar" deploy-path="/" handle="module:/resource/CartGateway/CartGateway">
-            <dependent-object/>
+        <dependent-module archiveName="jboss-transaction-api_1.2_spec-1.0.0.Final.jar" deploy-path="/lib" handle="module:/classpath/var/M2_REPO/org/jboss/spec/javax/transaction/jboss-transaction-api_1.2_spec/1.0.0.Final/jboss-transaction-api_1.2_spec-1.0.0.Final.jar">
             <dependency-type>uses</dependency-type>
         </dependent-module>
-        <dependent-module archiveName="CartWS.war" deploy-path="/" handle="module:/resource/CartWS/CartWS">
-            <dependent-object/>
+        <dependent-module archiveName="dom4j-1.6.1.jar" deploy-path="/lib" handle="module:/classpath/var/M2_REPO/dom4j/dom4j/1.6.1/dom4j-1.6.1.jar">
             <dependency-type>uses</dependency-type>
         </dependent-module>
-        <dependent-module archiveName="CartUtil.jar" deploy-path="/lib" handle="module:/resource/CartUtil/CartUtil">
+        <dependent-module archiveName="xml-apis-1.0.b2.jar" deploy-path="/lib" handle="module:/classpath/var/M2_REPO/xml-apis/xml-apis/1.0.b2/xml-apis-1.0.b2.jar">
             <dependency-type>uses</dependency-type>
         </dependent-module>
-        <dependent-module archiveName="CartWebApp.war" deploy-path="/" handle="module:/resource/CartWebApp/CartWebApp">
-            <dependent-object/>
+        <dependent-module archiveName="hibernate-commons-annotations-4.0.5.Final.jar" deploy-path="/lib" handle="module:/classpath/var/M2_REPO/org/hibernate/common/hibernate-commons-annotations/4.0.5.Final/hibernate-commons-annotations-4.0.5.Final.jar">
             <dependency-type>uses</dependency-type>
         </dependent-module>
-        <dependent-module archiveName="CartServices.jar" deploy-path="/lib" handle="module:/resource/CartServices/CartServices">
+        <dependent-module archiveName="hibernate-jpa-2.1-api-1.0.0.Final.jar" deploy-path="/lib" handle="module:/classpath/var/M2_REPO/org/hibernate/javax/persistence/hibernate-jpa-2.1-api/1.0.0.Final/hibernate-jpa-2.1-api-1.0.0.Final.jar">
             <dependency-type>uses</dependency-type>
         </dependent-module>
-        <dependent-module archiveName="CartPersistenceWF.jar" deploy-path="/lib" handle="module:/resource/CartPersistenceWF/CartPersistenceWF">
+        <dependent-module archiveName="javassist-3.18.1-GA.jar" deploy-path="/lib" handle="module:/classpath/var/M2_REPO/org/javassist/javassist/3.18.1-GA/javassist-3.18.1-GA.jar">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
+        <dependent-module archiveName="antlr-2.7.7.jar" deploy-path="/lib" handle="module:/classpath/var/M2_REPO/antlr/antlr/2.7.7/antlr-2.7.7.jar">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
+        <dependent-module archiveName="jandex-1.1.0.Final.jar" deploy-path="/lib" handle="module:/classpath/var/M2_REPO/org/jboss/jandex/1.1.0.Final/jandex-1.1.0.Final.jar">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
+        <dependent-module archiveName="hibernate-entitymanager-4.3.11.Final.jar" deploy-path="/lib" handle="module:/classpath/var/M2_REPO/org/hibernate/hibernate-entitymanager/4.3.11.Final/hibernate-entitymanager-4.3.11.Final.jar">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
+        <dependent-module archiveName="postgresql-9.4-1204.jdbc4.jar" deploy-path="/lib" handle="module:/classpath/var/M2_REPO/org/postgresql/jdbc/postgresql/9.4-1204.jdbc4/postgresql-9.4-1204.jdbc4.jar">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
+        <dependent-module archiveName="CartPersistenceWF-1.0.jar" deploy-path="/lib" handle="module:/resource/CartPersistenceWF/CartPersistenceWF">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
+        <dependent-module archiveName="CartGatewayClient-1.0.jar" deploy-path="/lib" handle="module:/resource/CartGatewayClient/CartGatewayClient">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
+        <dependent-module archiveName="CartUtil-1.0.jar" deploy-path="/lib" handle="module:/resource/CartUtil/CartUtil">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
+        <dependent-module archiveName="CartServicesClient-1.0.jar" deploy-path="/lib" handle="module:/resource/CartServicesClient/CartServicesClient">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
+        <dependent-module archiveName="CartServices-1.0.jar" deploy-path="/lib" handle="module:/resource/CartServices/CartServices">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
+        <dependent-module archiveName="CartGateway-1.0.jar" deploy-path="/" handle="module:/resource/CartGateway/CartGateway">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
+        <dependent-module archiveName="CartRS-1.0.war" deploy-path="/" handle="module:/resource/CartRS/CartRS">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
+        <dependent-module archiveName="CartWS-1.0.war" deploy-path="/" handle="module:/resource/CartWS/CartWS">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
+        <dependent-module archiveName="CartWebApp-1.0.war" deploy-path="/" handle="module:/resource/CartWebApp/CartWebApp">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
+        <dependent-module archiveName="struts2-core-2.3.24.1.jar" deploy-path="/lib" handle="module:/classpath/var/M2_REPO/org/apache/struts/struts2-core/2.3.24.1/struts2-core-2.3.24.1.jar">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
+        <dependent-module archiveName="xwork-core-2.3.24.1.jar" deploy-path="/lib" handle="module:/classpath/var/M2_REPO/org/apache/struts/xwork/xwork-core/2.3.24.1/xwork-core-2.3.24.1.jar">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
+        <dependent-module archiveName="commons-lang3-3.2.jar" deploy-path="/lib" handle="module:/classpath/var/M2_REPO/org/apache/commons/commons-lang3/3.2/commons-lang3-3.2.jar">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
+        <dependent-module archiveName="asm-3.3.jar" deploy-path="/lib" handle="module:/classpath/var/M2_REPO/asm/asm/3.3/asm-3.3.jar">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
+        <dependent-module archiveName="asm-commons-3.3.jar" deploy-path="/lib" handle="module:/classpath/var/M2_REPO/asm/asm-commons/3.3/asm-commons-3.3.jar">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
+        <dependent-module archiveName="asm-tree-3.3.jar" deploy-path="/lib" handle="module:/classpath/var/M2_REPO/asm/asm-tree/3.3/asm-tree-3.3.jar">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
+        <dependent-module archiveName="freemarker-2.3.22.jar" deploy-path="/lib" handle="module:/classpath/var/M2_REPO/org/freemarker/freemarker/2.3.22/freemarker-2.3.22.jar">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
+        <dependent-module archiveName="ognl-3.0.6.jar" deploy-path="/lib" handle="module:/classpath/var/M2_REPO/ognl/ognl/3.0.6/ognl-3.0.6.jar">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
+        <dependent-module archiveName="javassist-3.11.0.GA.jar" deploy-path="/lib" handle="module:/classpath/var/M2_REPO/javassist/javassist/3.11.0.GA/javassist-3.11.0.GA.jar">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
+        <dependent-module archiveName="commons-fileupload-1.3.1.jar" deploy-path="/lib" handle="module:/classpath/var/M2_REPO/commons-fileupload/commons-fileupload/1.3.1/commons-fileupload-1.3.1.jar">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
+        <dependent-module archiveName="commons-io-2.2.jar" deploy-path="/lib" handle="module:/classpath/var/M2_REPO/commons-io/commons-io/2.2/commons-io-2.2.jar">
             <dependency-type>uses</dependency-type>
         </dependent-module>
     </wb-module>
