--- a/07_CART/CART_APP_WF_WL/CartGateway/.settings/org.eclipse.wst.common.component
+++ b/07_CART/CART_APP_WF_WL/CartGateway/.settings/org.eclipse.wst.common.component
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
     <wb-module deploy-name="CartGateway">
-        <wb-resource deploy-path="/" source-path="/ejbModule" tag="defaultRootSource"/>
+        <wb-resource deploy-path="/" source-path="/src"/>
+        <wb-resource deploy-path="/" source-path="/config" tag="defaultRootSource"/>
         <property name="java-output-path" value="/CartGateway/build/classes"/>
         <property name="ClientProject" value="CartGatewayClient"/>
         <property name="ClientJARURI" value="CartGatewayClient.jar"/>
