--- a/07_CART/CART_APP_WF_WL/CartWS/.settings/org.eclipse.wst.common.component
+++ b/07_CART/CART_APP_WF_WL/CartWS/.settings/org.eclipse.wst.common.component
@@ -1,8 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
-    <wb-module deploy-name="CartWS">
-        <wb-resource deploy-path="/" source-path="/cartws" tag="defaultRootSource"/>
+    <wb-module deploy-name="CartWS-1.0">
+        <wb-resource deploy-path="/" source-path="/cartws"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src"/>
-        <property name="context-root" value="cartws"/>
+        <wb-resource deploy-path="/" source-path="/build/m2e-wtp/web-resources"/>
+        <wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/config"/>
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/test"/>
         <property name="java-output-path" value="/CartWS/build/classes"/>
+        <property name="context-root" value="CartWS"/>
     </wb-module>
 </project-modules>
