--- a/07_CART/CART_APP_WF_WL/CartWebApp/.settings/org.eclipse.wst.common.component
+++ b/07_CART/CART_APP_WF_WL/CartWebApp/.settings/org.eclipse.wst.common.component
@@ -1,8 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
-    <wb-module deploy-name="CartWebApp">
-        <wb-resource deploy-path="/" source-path="/cart" tag="defaultRootSource"/>
-        <wb-resource deploy-path="/" source-path="/cart/WEB-INF/classes"/>
+    <wb-module deploy-name="CartWebApp-1.0">
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/src"/>
+        <wb-resource deploy-path="/" source-path="/build/m2e-wtp/web-resources"/>
+        <wb-resource deploy-path="/" source-path="/webapp" tag="defaultRootSource"/>
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/config"/>
         <property name="java-output-path" value="/CartWebApp/build/classes"/>
-        <property name="context-root" value="cart"/>
+        <property name="context-root" value="CartWebApp"/>
+        <property name="component.inclusion.patterns" value="*.jsp"/>
     </wb-module>
 </project-modules>
